Fix mobile hero and overflow x.

--- a/web/themes/custom/een/assets/src/sass/layout/_layout--grid.scss
+++ b/web/themes/custom/een/assets/src/sass/layout/_layout--grid.scss
@@ -11,12 +11,12 @@ html {
 
 html,
 body {
-  height: 100%;
+  height: auto;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
-  overflow-x: hidden;
 }
 
 .container {
